Pulldown position regression and not painting correctly tooltips regression

XMLWordPrintable

      Running hello.HelloStyledPopups
      with a feb 24th nightly, GTK2

      All of the pulldown menus are not in the right location.
      The tooltips are correctly located but are empty.

      hello.HelloComboBox - combobox options one cell too high ?
      Based on a comparision with Mac, the option dropdown box should be just below the field in question

       hello.HelloMenu
      Menu items overlap the button, and I can't see to see the submenus. The pulldown is not sticking on single click ?

      hello.HelloMenuButton
      Also same issue with MenuButton
      SplitMenuButton not painting about half the time

      hello.HelloPopupMenu
      Also offset and periodic painting issue.

      hello.HelloTooltip
      periodic painting issue with tooltips

      hello.HelloHTMLEditor
      offset with drop downs, tooltips painting

            Assignee:
            Semyon Sadetsky (Inactive)
            Reporter:
            David Hill (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: