8175822: Pulldown position regression and not painting correctly tooltips regression

Reviewed-by: kcr, ddhill, ckyang