modules/javafx.graphics/src/main/native-glass/gtk/glass_window.h
@@ -430,6 +430,7 @@ private:
     void update_ontop_tree(bool);
     bool on_top_inherited();
     bool effective_on_top();
+    void ensure_window_size();
     WindowContextTop(WindowContextTop&);
     WindowContextTop& operator= (const WindowContextTop&);
 };
